rendering all sections

--- a/src/sass/_about.scss
+++ b/src/sass/_about.scss
@@ -28,7 +28,7 @@
 
     &:before {
       position: absolute;
-      content: '';
+      content: "";
       border-bottom: 18px solid $color-red;
       width: 16rem;
       display: block;
