--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -50,9 +50,8 @@
 .return-home {
   position: absolute;
   top: -25px;
-
-  width: 40px;
-  height: 45px;
+  width: 48px;
+  height: 54px;
   margin-right: auto;
   margin-left: auto;
   left: 0;
@@ -80,5 +79,6 @@
 
   & svg {
     width: 100%;
+    height: 100%;
   }
 }
