--- a/src/sass/_projects.scss
+++ b/src/sass/_projects.scss
@@ -27,14 +27,16 @@
   &__all-projects-button-container {
     display: flex;
     justify-content: center;
-    margin-top: 0rem; // Removed extra space
+    margin-top: 5rem; // Removed extra space
 
     // Adjust margin-top if needed
     // margin-top: 2rem;
   }
 
   &__all-projects-button {
-    font-size: 1.6rem;
+    position: relative;
+    z-index: 0;
+    font-size: 2.5rem;
     font-weight: 700;
     letter-spacing: 3px;
     line-height: 1;
@@ -45,28 +47,26 @@
     align-items: center;
     width: fit-content;
     padding: 1rem 1.2rem;
-    position: relative;
     cursor: pointer;
-    transition: all 0.25s;
 
-    &:after {
-      position: absolute;
+    &::after {
       content: "";
+      position: absolute;
+      left: 0;
+      bottom: 0;
+      width: 100%;
       height: 2px;
       background-color: $color-red;
-      width: 100%;
-      bottom: 1px;
-      display: block;
+      z-index: -1; // Keep behind the parent content
       transform-origin: bottom;
       transition: all 0.25s;
-      z-index: -1;
     }
 
     &:hover {
-      color: $color-red;
+      color: $color-background;
     }
 
-    &:hover:after {
+    &:hover::after {
       height: 100%;
     }
   }
